fixing margins on mobile memo

--- a/style/stylememo.css
+++ b/style/stylememo.css
@@ -91,13 +91,13 @@ div.footer a:hover{
 and (min-device-width : 320px)
 and (max-device-width : 480px) { 
     p {
-        margin: 0 1% 0 %;
+        margin: 0 1% 0 1%;
         font-size: 1.5vmax;
     }
 
     p.intro {
         font-size: 2vmax;
-        margin: 0 1% 0 %;
+        margin: 0 1% 0 1%;
     }
 
     div.footer {
